* Update flag markers on diffs on AJAX review * Hide some rating tag clutter in places * Made wgFlaggedRevsParams JS param more useful * Fixed broken one-rev case diff CSS * Refactored prettyRatingBox() * Replaced some <b> tags with CSS * Cleaned up msg usage * Some style cleanups

--- a/client/flaggedrevs.css
+++ b/client/flaggedrevs.css
@@ -206,6 +206,7 @@ li.flaggedrevs_hist_stable {
 
 .fr-diff-ratings {
 	font-size: 90%;
+	font-weight: bold;
 	line-height: 1em;
 	width: 100%;
 }
